# vulkan-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  avkex-commandbuffers.cpp  avkex-device.cpp  avkex-discardpool.cpp  avkex-functions.cpp  avkex-instance.cpp  avkex-macros.h  avkex-os.cpp  avkex-os.h  avkex-pipelines.cpp  avkex-shader.cpp  avkex-utils.h  avkex.h  generate_launcher.cmake  main.cpp  notes.md  prepare_build_vulkan_macos.sh  run-vulkan.sh.in  sh_utils.sh  vcpkg.json
notes/: SPIR-V.md
shaders/: bitonic.cu  saxpy.first.spv  saxpy.first.spvasm  saxpy.g.comp
